<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_cover_min"
    android:padding="8dp">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/logo_circle"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="44dp"
        app:actualImageScaleType="centerCrop"
        app:backgroundImage="@drawable/app_logo_min"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:roundAsCircle="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toTopOf="@+id/text_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_circle">

        <EditText
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_button_save"
            android:drawableStart="@drawable/ic_mail_outline_black_24dp"
            android:drawablePadding="8dp"
            android:ems="15"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="6dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/text_input2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_email"
        app:passwordToggleDrawable="@drawable/icon_visible_seceltor"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_button_save"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="8dp"
            android:ems="15"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="6dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/sign_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input"
        app:passwordToggleDrawable="@drawable/icon_visible_seceltor"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_confirm"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_button_save"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="8dp"
            android:ems="15"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="6dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_button"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input2" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in"
        app:layout_constraintLeft_toLeftOf="@+id/sign_in"
        app:layout_constraintRight_toRightOf="@+id/sign_in"
        app:layout_constraintTop_toTopOf="@+id/sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>